# uscornie

./: .changie.yaml  .env.example  .gitignore  .rumdl.toml  AGENTS.md  Brewfile  CHANGELOG.md  CONTRIBUTING.md  README.md  aqua.yaml  commitlint.config.js  docker-compose.yml  lefthook.yml  package.json
.agent/rules/: react-rules.md
.agent/skills/commit/: SKILL.md
.agent/skills/conventional-commits/: SKILL.md
.agent/skills/create-pr/: SKILL.md
.agent/skills/react-best-practices/: SKILL.md
.changie/: 0.1.7.md  0.1.8.md  0.1.9.md  0.2.0.md  0.2.1.md  1.0.0.md  1.1.0.md  v0.0.1.
.changie/unreleased/: .gitkeep  backend-changed-20260603-001643.yaml  backend-changed-20260615-225733.yaml  backend-changed-20260615-230211.yaml  backend-removed-20260601-235151.yaml  backend-security-20260603-000150.yaml  ci-fixed-20260601-220206.yaml  ci-fixed-20260601-220321.yaml  ci-fixed-20260601-220621.yaml  docs-changed-20260531-233238.yaml  docs-fixed-20260531-170341.yaml  frontend-added-20260601-013220.yaml  frontend-added-20260601-223657.yaml  frontend-changed-20260605-225319.yaml  frontend-changed-20260605-230430.yaml  frontend-changed-20260606-181145.yaml  frontend-changed-20260607-162732.yaml  frontend-changed-20260618-232015.yaml  frontend-removed-20260601-235151.yaml  infra-added-20260531-233507.yaml  infra-changed-20260615-225410.yaml  infra-fixed-20260531-172008.yaml  infra-fixed-20260531-172711.yaml  infra-fixed-20260531-172945.yaml  infra-fixed-20260531-184636.yaml  infra-fixed-20260531-185827.yaml  test-added-20260603-223800.yaml  tooling-added-20260601-013222.yaml  tooling-security-20260601-213200.yaml
.gemini/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-frontend.yml  release-pr.yml  release-tag.yml  release.yml
backend/: .dockerignore  Dockerfile  README.md  auth_utils.py  conftest.py  database.py  exceptions.py  main.py  models.py  pyproject.toml  test.db
backend/auth/: README.md  endpoints.py  exceptions.py  model.py  parsers.py  repository.py  schemas.py  service.py  utils.py
backend/invites/: __init__.py  endpoints.py  exceptions.py  model.py  repository.py  schemas.py  service.py
backend/items/: endpoints.py  exceptions.py  model.py  repository.py  schemas.py  service.py
backend/kit/: __init__.py  database.py  dependencies.py  exceptions.py  http.py
backend/migrations/: env.py
backend/migrations/versions/: 0e893306048b_initial_migration.py  3c8db722b7c0_convert_device_info_to_json.py  7b4a38041449_add_items_table.py  95345e52ec3a_initial_migration.py  a9fd128636a7_add_status_to_invitations.py  f1b4095f8f0c_convert_device_info_to_json_and_make_ip_.py
backend/models/: README.md  __init__.py  invitation.py  space.py  space_member.py  user.py
backend/spaces/: __init__.py  endpoints.py  exceptions.py  model.py  repository.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth_service.py  test_auth_utils.py  test_errors.py
backend/tests/integration/: test_auth_session.py  test_invites.py  test_items.py
backend/tests/unit/: test_auth_service.py  test_errors.py  test_invite_service.py  test_items_service.py  test_space_service.py
docs/: items-sync-architecture.md
docs/deployment/: architecture.md  backend-tunnel-setup.md  cicd-pipeline.md  frontend-setup.md  index.md
frontend/: .dockerignore  Dockerfile  biome.json  doctor.config.json  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend-vue/: .dockerignore  index.html  pnpm-lock.yaml  tsconfig.app.json
frontend-vue/src/: router.ts  style.css
frontend-vue/src/components/: NavBar.vue
frontend-vue/src/services/: spaceService.ts
frontend-vue/src/views/: GiftPage.vue  HomePage.vue
frontend/src/: App.test.js  App.vue  HomePage.vue  JoinPage.vue  api.ts  router.js  style.css
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/components/: AnimatedBackground.module.css  AnimatedBackground.tsx  AnimatedBackground.vue  GoogleSignInButton.tsx  NavBar.tsx
frontend/src/data/: mock.ts
frontend/src/lib/: api.ts
frontend/src/services/: authService.ts  spaceService.ts
frontend/src/stores/: useAuthStore.ts  useDataStore.ts
frontend/src/types/: env.d.ts  index.ts
frontend/src/utils/: svgHelpers.js  svgHelpers.ts
frontend/src/views/: CalendarPage.vue  DatePage.vue  (+2 more)
scripts/: check-added-files-size.sh  check-changie.sh  check-react-health.sh  run-semgrep.sh
test/: README.md  conftest.py  pyproject.toml  test_collaboration.py  test_items_flow.py
(+107 files in other folders)
