[project]
name = "uscornie-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-jose[cryptography]",
    "python-multipart",
    "google-auth",
    "requests",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify (simplify code)
    "ASYNC",  # flake8-async (async/await issues)
    "FAST",   # FastAPI specific rules
    "RUF",    # Ruff-specific rules
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "T20",    # flake8-print (forbid print in production)
]
ignore = [
    "E501",   # Line length (handled by ruff format)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
respect-ignore-files = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-import = "error"
possibly-unbound-attribute = "error"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
