[project]
name = "uscornie-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "testcontainers[postgres]>=3.7.0",
    "sqlalchemy",
    "psycopg2-binary",
    "pytest-dotenv>=0.5.2",
    "pytest-xdist>=3.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["../backend"]
env_files = [
    "../.env"
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify (simplify code)
    "ASYNC",  # flake8-async (async/await issues)
    "FAST",   # FastAPI specific rules
    "RUF",    # Ruff-specific rules
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "T20",    # flake8-print (forbid print in production)
    "C90",    # flake8-mccabe (complexity)
]
ignore = [
    "E501",   # Line length (handled by ruff format)
    "RET504", # Allow unnecessary assignment before return statement
]

[tool.pyright]
extraPaths = ["../backend"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

